--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,16 +1,6 @@
 name: CI
 
-on:
-  push:
-    branches:
-      - main
-      - master
-    tags:
-      - '*'
-  pull_request:
-    branches:
-      - main
-      - master
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
@@ -19,14 +9,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2019, ubuntu-20.04]
-        sourcemod-version: [1.11-dev]
-        python-version: ['3.10']
-        include:
-          - os: ubuntu-20.04
-            sdks: css,csgo
-          - os: windows-2019
-            sdks: csgo
+        os: [windows-latest, ubuntu-latest]
+        sourcemod-version: [master] # (1.11)
+        metamod-version: [master] # (1.11)
+        sdks: [csgo, css, l4d2]
 
     steps:
       - name: Install Linux packages
@@ -34,84 +20,57 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -yq --no-install-recommends g++-multilib
-
       - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
 
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
         with:
           path: extension
+          
+      - name: Checkout Metamod
+        uses: actions/checkout@v2
+        with:
+          repository: alliedmodders/metamod-source
+          ref: ${{ matrix.metamod-version }}
+          path: 'metamod-source'
 
       - name: Checkout SourceMod
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
         with:
           repository: alliedmodders/sourcemod
           ref: ${{ matrix.sourcemod-version }}
           path: sourcemod
           submodules: recursive
+          
+      - name: Checkout SDKs
+        uses: actions/checkout@v2
+        with:
+          repository: alliedmodders/hl2sdk
+          ref: ${{ matrix.sdks }}
+          path: hl2sdk-${{ matrix.sdks }}
+
+      - name: Checkout AMBuild
+        uses: actions/checkout@v2
+        with:
+          repository: alliedmodders/ambuild
+          path: ambuild
 
       - name: Install AMBuild
-        run: |
-          python -m pip install wheel
-          pip install git+https://github.com/alliedmodders/ambuild
-
-      - name: Install sourcemod dependencies
-        run: |
-          bash sourcemod/tools/checkout-deps.sh -m -s ${{ matrix.sdks }}
-
+        uses: BSFishy/pip-action@v1
+        with:
+          packages: ./ambuild
+          
       - name: Build
         working-directory: extension
         shell: bash
-        env:
-          BREAKPAD_SYMBOL_SERVER: ${{ secrets.BREAKPAD_SYMBOL_SERVER }}
         run: |
           mkdir build && cd build
-          python ../configure.py --enable-optimize --symbol-files --sdks=${{ matrix.sdks }}
+          python ../configure.py --sdks ${{ matrix.sdks }} --enable-optimize
           ambuild
-
+          
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
           name: ${{ runner.os }}
           path: extension/build/package
-
-  release:
-    name: Release
-    if: startsWith(github.ref, 'refs/tags/')
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-
-      - name: Package
-        run: |
-          version=`echo $GITHUB_REF | sed "s/refs\/tags\///"`
-          ls -Rall
-          if [ -d "./Linux/" ]; then
-            cd ./Linux/
-            tar -czf ../${{ github.event.repository.name }}-${version}-linux.tar.gz -T <(\ls -1)
-            cd -
-          fi
-          if [ -d "./macOS/" ]; then
-            cd ./macOS/
-            tar -czf ../${{ github.event.repository.name }}-${version}-mac.tar.gz -T <(\ls -1)
-            cd -
-          fi
-          if [ -d "./Windows/" ]; then
-            cd ./Windows/
-            tar -czf ../${{ github.event.repository.name }}-${version}-windows.tar.gz -T <(\ls -1)
-            cd -
-          fi
-
-      - name: Release
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: '*.tar.gz'
-          tag: ${{ github.ref }}
-          file_glob: true
